rewrite using BufferedReader, optimize